--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,16 +1,58 @@
-html,
-body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+.background {
+  max-height: 100%;
+  height: 98vh;
+  background: linear-gradient(0deg, #fff, #eae6ff 100%);
+  display: flex;
+  justify-content: center;
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
+.container {
+  display: flex;
+  height: 100%;
+  width: 100%;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  max-width: 520px;
 }
 
-* {
-  box-sizing: border-box;
+.title {
+  font-size: 3rem;
+  line-height: 1.25;
+  margin-bottom: 1rem;
+  font-family: roboto;
+  font-weight: 500;
+}
+
+.chatbox {
+  min-width: 100%;
+  height: 480px;
+  display: flex;
+  overflow-y: auto;
+  flex-direction: column-reverse;
+  text-align: center;
+}
+
+.formContainer {
+  width: 98%;
+  min-height: 48px;
+}
+
+.formBase {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: "16px";
+  height: 100%;
+  width: 100%;
+  padding: 8px;
+}
+
+.textBox {
+  min-height: 48px;
+  width: 100%;
+  padding-left: 8px;
+  padding-right: 8px;
 }
